# rrt

./: Cargo.toml  README.md  bench.sh
examples/: teapot.rs  wall.rs
model/: README.md
src/: camera.rs  hit.rs  lib.rs  main.rs  material.rs  model.rs  random.rs  ray.rs  renderer.rs  sphere.rs  triangle.rs  vec3.rs
