[package]
name = "rrt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_eq = "0.6.0"
once_cell = "1.7.2"
image = "0.23.14"
tokio = { version = "1.5.0", features = ["full"] }
fastrand = "1.4.1"
clap = "2.33.3"
